--- a/environment.yml
+++ b/environment.yml
@@ -4,69 +4,46 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2022.10.11=h06a4308_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - certifi=2022.12.7=py39h06a4308_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.2=h6a678d5_6
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
-  - ncurses=6.3=h5eee18b_3
+  - ncurses=6.4=h6a678d5_0
   - openssl=1.1.1s=h7f8727e_0
   - pip=22.3.1=py39h06a4308_0
-  - python=3.9.15=h7a1cb2a_2
+  - python=3.9.16=h7a1cb2a_0
   - readline=8.2=h5eee18b_0
   - setuptools=65.6.3=py39h06a4308_0
   - sqlite=3.40.1=h5082296_0
   - tk=8.6.12=h1ccaba5_0
   - tzdata=2022g=h04d1e81_0
   - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.8=h5eee18b_0
+  - xz=5.2.10=h5eee18b_1
   - zlib=1.2.13=h5eee18b_0
   - pip:
-    - blis==0.7.9
-    - catalogue==2.0.8
     - charset-normalizer==3.0.1
     - click==8.1.3
-    - confection==0.0.4
-    - cymem==2.0.7
     - filelock==3.9.0
-    - huggingface-hub==0.11.1
     - idna==3.4
-    - jinja2==3.1.2
     - joblib==1.2.0
-    - langcodes==3.3.0
-    - markupsafe==2.1.1
-    - murmurhash==1.0.9
     - nltk==3.8.1
-    - numpy==1.24.1
-    - nvidia-cublas-cu11==11.10.3.66
-    - nvidia-cuda-nvrtc-cu11==11.7.99
-    - nvidia-cuda-runtime-cu11==11.7.99
-    - nvidia-cudnn-cu11==8.5.0.96
+    - numpy==1.20.3
     - packaging==23.0
-    - pandas==1.5.2
-    - pathy==0.10.1
-    - preshed==3.0.8
-    - pydantic==1.10.4
+    - pandas==1.5.3
     - python-dateutil==2.8.2
     - pytz==2022.7.1
     - pyyaml==6.0
     - regex==2022.10.31
     - requests==2.28.2
+    - scikit-learn==1.2.1
+    - scipy==1.10.0
     - six==1.16.0
-    - smart-open==6.3.0
-    - spacy==3.4.4
-    - spacy-legacy==3.0.11
-    - spacy-loggers==1.0.4
-    - srsly==2.4.5
-    - thinc==8.1.7
-    - tokenizers==0.13.2
-    - torch==1.13.1
+    - threadpoolctl==3.1.0
+    - tokenizers==0.12.1
     - tqdm==4.64.1
-    - transformers==4.25.1
-    - typer==0.7.0
     - typing-extensions==4.4.0
     - urllib3==1.26.14
-    - wasabi==0.10.1
 prefix: /home/limzhan/anaconda3/envs/env_annoevaluate
