update aml component yml file

--- a/model_evaluate/aml_component/AMLComp_evaluate.yml
+++ b/model_evaluate/aml_component/AMLComp_evaluate.yml
@@ -1,24 +1,24 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
 name: EvaluateModlWithLabeledData
 display_name: EvaluateModlWithLabeledData
+# version: 1b
 type: command
 inputs:
   model_path:
     type: uri_folder
   data_path:
-    type: uri_file
+    type: uri_folder
   tokenizer_type:
     type: string
     default: "local"
-    enum: ["bert", "nltk", "local"]
-
+ 
 outputs:
   output_path:
     type: uri_folder
 code: ./
 environment: azureml:huggingface:1
 command: >-
-  python add_token.py 
+  python evaluate_component.py
   --model_path ${{inputs.model_path}}
   --data_path ${{inputs.data_path}}
   --tokenizer_type ${{inputs.tokenizer_type}}
