--- a/model_evaluate/evaluate.yml
+++ b/model_evaluate/evaluate.yml
@@ -2,7 +2,7 @@ $schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.jso
 name: model_evaluate_with_labeled_data
 display_name: model_evaluate_with_labeled_data
 # version: 1b
-source_directory: ./
+source_directory: .
 type: command
 inputs:
   model_path:
@@ -16,7 +16,7 @@ inputs:
 outputs:
   output_path:
     type: uri_folder
-code: ./
+code: .
 environment: azureml:env_annoevaluate
 command: >-
   python evaluate_component.py
