--- a/model_evaluate/aml_component/evaluate.yml
+++ b/model_evaluate/aml_component/evaluate.yml
@@ -1,12 +1,14 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json
-name: model_evaluate_with_labeled_data
-display_name: model_evaluate_with_labeled_data
+name: model_evaluate_ner
+display_name: model_evaluate_ner
 # version: 1b
 type: command
 inputs:
   model_path:
     type: uri_folder
-  data_path:
+  data_path_id2query:
+    type: uri_folder
+  data_path_labeled:
     type: uri_folder
   tokenizer_type:
     type: string
@@ -20,6 +22,7 @@ environment: azureml:env_annoevaluate
 command: >-
   python evaluate_component.py
   --model_path ${{inputs.model_path}}
-  --data_path ${{inputs.data_path}}
+  --data_path_id2query ${{inputs.data_path_id2query}}
+  --data_path_labeled ${{inputs.data_path_labeled}}
   --tokenizer_type ${{inputs.tokenizer_type}}
   --output_path ${{outputs.output_path}}
